# geocolor

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml  ubuntu.yml
changelog/: index.html
common/: index.html
contributing/: index.html
docs/: common.md  contributing.md  foliumap.md  geocolor.md  index.md  installation.md  usage.md
docs/examples/: folium.ipynb  intro.ipynb  map.ipynb  raster.ipynb  split_map.ipynb  test.ipynb
examples/folium/: index.html
examples/intro/: index.html  intro.ipynb
examples/map/: index.html  map.ipynb
examples/raster/: index.html
examples/split_map/: index.html
examples/test/: index.html
faq/: index.html
foliumap/: index.html
geocolor/: __init__.py  foliumap.py  geocolor.py  index.html
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_geocolor.py
usage/: index.html
